[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/tiles.png" type="Texture" id=1]
[ext_resource path="res://enemies/enemy_bullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="EnemyBullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_EnemyBullet_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_EnemyBullet_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyBullet_body_entered"]
